plugins {
    id 'dev.architectury.loom' version '1.14-SNAPSHOT' apply false
    id 'architectury-plugin' version '3.4-SNAPSHOT'
    id 'com.github.johnrengelman.shadow' version '8.1.1' apply false
}

architectury {
    minecraft = project.minecraft_version
}

allprojects {
    group = rootProject.maven_group
    version = rootProject.mod_version
}

subprojects {
    apply plugin: 'dev.architectury.loom'
    apply plugin: 'architectury-plugin'
    apply plugin: 'maven-publish'

    base {
        // Set up a suffixed format for the mod jar names, e.g. `example-fabric`.
        archivesName = "$rootProject.archives_name-$project.name-$project.minecraft_version"
    }

    tasks.withType(AbstractArchiveTask).configureEach {
        archiveVersion = "v${project.version}"
    }

    repositories {
        mavenCentral()
        exclusiveContent {
            forRepository {
                maven {
                    name = 'RyanHCode Maven'
                    url = 'https://maven.ryanhcode.dev/releases'
                }
            }
            filter {
                includeGroup("foundry.imguimc")
                includeGroup 'dev.ryanhcode.sable'
                includeGroup 'dev.ryanhcode.sable-companion'
            }
        }
        maven {
            name = 'Create'
            url = 'https://maven.createmod.net'
        }
        maven {
            name = 'BlameJared Maven (CrT / Bookshelf)'
            url = 'https://maven.blamejared.com'
        }
        maven {
            name = 'Engine Room'
            url = 'https://mvn.devos.one/releases'
        }
        maven {
            name = 'Registrate Hidden'
            url = 'https://maven.ithundxr.dev/hidden'
        }
        maven {
            name = 'Registrate Snapshots'
            url = 'https://maven.ithundxr.dev/snapshots'
        }
        maven {
            name = 'tterrag'
            url = 'https://maven.tterrag.com/'
        }
        maven {
            name = "Terraformers"
            url = "https://maven.terraformersmc.com/"
        }
        maven {
            name = 'Architectury'
            url = 'https://maven.architectury.dev/'
        }
        maven {
            name = 'Shedaniel Maven'
            url = 'https://maven.shedaniel.me/'
        }
        maven {
            name = 'Modrinth'
            url = 'https://api.modrinth.com/maven'
            content {
                includeGroup 'maven.modrinth'
            }
        }
        maven {
            name = 'Fuzs Mod Resources'
            url = 'https://raw.githubusercontent.com/Fuzss/modresources/main/maven/'
            content {
                includeGroup 'fuzs.forgeconfigapiport'
                includeGroup 'fuzs.forgeconfigscreens'
            }
        }
        exclusiveContent {
            forRepository {
                maven {
                    name = "CurseForge"
                    url = "https://cursemaven.com"
                }
            }
            filter {
                includeGroup "curse.maven"
            }
        }
        repositories {
            maven {
                url "https://maven.latvian.dev/releases"
                content {
                    includeGroup "dev.latvian.mods"
                    includeGroup "dev.latvian.apps"
                }
            }

            maven {
                url 'https://jitpack.io'
                content {
                    includeGroup "com.github.rtyley"
                }
            }
        }
    }

    dependencies {
        minecraft "net.minecraft:minecraft:$rootProject.minecraft_version"
        mappings loom.officialMojangMappings()

        // TODO use this for adding debugging interfaces in the future
        compileOnly("foundry.imguimc:imguimc-common-${project.minecraft_version}:${project.imguimc_version}")
    }

    java {
        // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
        // if it is present.
        // If you remove this line, sources will not be generated.
        withSourcesJar()

        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 21
    }

    // Configure Maven publishing.
    publishing {
        publications {
            mavenJava(MavenPublication) {
                artifactId = base.archivesName.get()
                from components.java
            }
        }

        // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
        repositories {
            // Add repositories to publish to here.
            // Notice: This block does NOT have the same function as the block in the top level.
            // The repositories here will be used for publishing your artifact, not for
            // retrieving dependencies.
        }
    }
}
